<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controller.codeRunner.SandboxActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/ide_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clickable="false"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">
            <com.bradesco.projetoprogramacao.controller.codeRunner.IdeCodeParser
                android:id="@+id/editText_code_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/placeholder_codeDIY"
                android:inputType="textFilter|textMultiLine"
                android:textColorHint="#959595"
                android:padding="15dp"
                android:gravity="top"
                android:textSize="16sp"
                android:scrollbars="vertical"
                android:importantForAutofill="no" />
            <FrameLayout
                android:id="@+id/consoleLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:minHeight="60dp"
                android:layout_gravity="bottom"
                android:orientation="vertical">
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_stop"
                    android:backgroundTint="@color/stopRunning_fab"
                    app:fabCustomSize="34dp"
                    app:borderWidth="0dp"
                    android:contentDescription="@string/stop"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="60dp"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_run"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_play"
                    android:backgroundTint="@color/run_fab"
                    app:borderWidth="0dp"
                    app:fabCustomSize="40dp"
                    android:contentDescription="@string/run"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/console_shape"
                    android:backgroundTint="@color/consoleColor"
                    android:translationY="34dp"
                    android:clipChildren="false"
                    android:clipToPadding="false">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/consolefontcolor"
                        android:layout_margin="2dp"
                        android:text="@string/console"/>
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_corners_shape"
                        android:backgroundTint="?android:windowBackground"
                        android:layout_marginTop="25dp"
                        android:padding="10dp"
                        android:layout_marginBottom="35dp">
                        <com.bradesco.projetoprogramacao.controller.codeRunner.RunnerCli
                            android:id="@+id/consoleText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:alpha="0.8"
                            android:contentDescription="@string/code_runner"
                            android:freezesText="true"
                            android:gravity="bottom"
                            android:scrollbarDefaultDelayBeforeFade="5"
                            android:scrollbarThumbHorizontal="@drawable/scrollbar"
                            android:scrollbarThumbVertical="@drawable/scrollbar" />
                    </FrameLayout>
                </FrameLayout>
            </FrameLayout>
        </FrameLayout>
    </FrameLayout>
</layout>
