<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.OptionsActivity"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/banner_optionsMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:padding="10dp"
        android:minHeight="150dp"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/btn_star"
            android:layout_gravity="center|start"
            android:layout_marginStart="25dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/btn_star"
            android:layout_gravity="center|end"
            android:layout_marginEnd="25dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginBottom="27dp">
            <TextView
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Your Progress:"
                android:textAlignment="center"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/completedCoursesNumber"
                    android:textSize="20sp"
                    android:text="X"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text=" / "/>
                <TextView
                    android:textSize="20sp"
                    android:id="@+id/totalCoursesNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="X"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" courses completed!"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/optMenu_start_learning"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/btn_start_learning_optMenu"
            android:layout_gravity="center|bottom"/>
    </FrameLayout>

    <Button
        android:id="@+id/btn_option1_optionsMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/option1_optionActivity"/>

    <Button
        android:id="@+id/btn_option2_optionsMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/option2_optionActivity"/>

    <Button
        android:id="@+id/btn_option3_optionsMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/option3_optionActivity"/>

</LinearLayout>