<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="activities"
            type="com.bradesco.projetoprogramacao.model.course.Activities" />
        <variable
            name="courseName"
            type="String" />
    </data>
    <LinearLayout
        android:id="@+id/adapter_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/activities_adapter_shape"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="2dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/adapter_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?colorOnSecondaryContainer"
                    android:text="@{activities.name}"
                    android:ellipsize="end"
                    android:maxEms="8"
                    android:maxLines="1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="?colorOnSecondaryContainer"
                    android:layout_marginStart="13dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/from"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?colorOnSecondaryContainer"
                    android:textSize="11sp"
                    android:layout_marginEnd="5dp"
                    android:text="@{courseName}"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="11sp"
                    android:textColor="?colorOnSecondaryContainer"
                    android:text="@string/course"/>
            </LinearLayout>
            <ImageView
                android:id="@+id/adapter_complete_checkMark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:tint="?colorOnSecondaryContainer"
                android:src="@drawable/ic_action_check"
                android:contentDescription="@string/complete"/>
        </FrameLayout>
        <LinearLayout
            android:id="@+id/adapter_ExpandableArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/adapter_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{activities.desc}"
                android:ellipsize="end"
                android:textColor="?colorOnSecondaryContainer"
                android:textIsSelectable="false"
                android:maxLines="3"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp">
                <TextView
                    android:id="@+id/adapter_text_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?colorOnSecondaryContainer"
                    android:text="Difficulty"
                    android:layout_gravity="center|start"
                    android:textSize="15sp"
                    android:layout_marginStart="10dp"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/adapter_btn_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabCustomSize="40dp"
                    android:src="@drawable/ic_action_play"
                    android:layout_gravity="end"
                    android:contentDescription="@string/play"
                    app:borderWidth="0dp"
                    android:tint="@color/black"/>
            </FrameLayout>
        </LinearLayout>

    </LinearLayout>
</layout>
